fix: OAuth2 login no longer blocked when email not configured
If RESEND_API_KEY is not set or email send fails, fall back to issuing
JWT directly to /oauth2/callback instead of showing an error.